--- a/PrimeraEntrega/rss-reader/package.json
+++ b/PrimeraEntrega/rss-reader/package.json
@@ -25,5 +25,8 @@
     "rss-parser": "^3.12.0",
     "swr": "^2.0.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/sanitize-html": "^2.8.0"
   }
 }
