--- a/PrimeraEntrega/rss-reader/package.json
+++ b/PrimeraEntrega/rss-reader/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "rss-parser": "^3.12.0",
+    "sanitize-html": "^2.9.0",
     "swr": "^2.0.1",
     "typescript": "4.9.4"
   },
