--- a/PrimeraEntrega/rss-reader/package.json
+++ b/PrimeraEntrega/rss-reader/package.json
@@ -25,9 +25,11 @@
     "rss-parser": "^3.12.0",
     "sanitize-html": "^2.9.0",
     "swr": "^2.0.1",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/sanitize-html": "^2.8.0"
+    "@types/sanitize-html": "^2.8.0",
+    "@types/uuid": "^9.0.0"
   }
 }
