--- a/PrimeraEntrega/rss-reader/package.json
+++ b/PrimeraEntrega/rss-reader/package.json
@@ -18,7 +18,8 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "bootstrap": "^5.2.3",
-    "next": "13.1.5",
+    "mongodb": "^5.0.1",
+    "next": "^13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
