--- a/PrimeraEntrega/rss-reader/package.json
+++ b/PrimeraEntrega/rss-reader/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.0.1",
     "next": "^13.1.5",
     "react": "18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.0",
     "rss-parser": "^3.12.0",
