--- a/SegundaEntrega/rss-reader/package.json
+++ b/SegundaEntrega/rss-reader/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "bootstrap": "^5.2.3",
+    "http-proxy-middleware": "^2.0.6",
     "lodash.debounce": "^4.0.8",
     "mongodb": "^5.0.1",
     "next": "^13.1.5",
