--- a/SegundaEntrega/rss-reader/vercel.json
+++ b/SegundaEntrega/rss-reader/vercel.json
@@ -1,7 +1,7 @@
 {
     "routes": [
       {
-        "src": "/*",
+        "src": "/(.*)",
         "dest": "https://lector-de-noticias-rss-git-anatali-jonatanjsm.vercel.app/"
       }
     ]
