--- a/SegundaEntrega/rss-reader/vercel.json
+++ b/SegundaEntrega/rss-reader/vercel.json
@@ -1,8 +1,8 @@
 {
     "routes": [
       {
-        "src": "/api/(.*)",
-        "dest": "https://lector-de-noticias-rss-git-jsantana-jonatanjsm.vercel.app/api"
+        "src": "/api/newsEP",
+        "dest": "https://lector-de-noticias-rss-git-jsantana-jonatanjsm.vercel.app/api/newsEP"
       }
     ]
   }
