--- a/SegundaEntrega/rss-reader/vercel.json
+++ b/SegundaEntrega/rss-reader/vercel.json
@@ -4,5 +4,10 @@
         "src": "/api/newsEP",
         "dest": "https://lector-de-noticias-rss-git-jsantana-jonatanjsm.vercel.app/api/newsEP"
       }
-    ]
+    ],
+    "build": {
+      "env": {
+        "NEXT_PUBLIC_ENABLE_GZIP": "1"
+      }
+    }
   }
